objects/PRC_Media_Events_Invitees__c.object
<CustomObject>
    <label>Media Events Invitees</label>
    <nameField>
        <displayFormat>EI#{0}</displayFormat>
        <label>Invitees</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media Events Invitees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>PRC_Coverage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coverage_Links__c</fullName>
        <label>Coverage Links</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PRC_RSVP_Status__c</fullName>
        <label>RSVP Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attended</fullName>
                </value>
                <value>
                    <fullName>Pending - Conditional Confirmation</fullName>
                </value>
                <value>
                    <fullName>Invited - Declined</fullName>
                </value>
                <value>
                    <fullName>Invited - Awaiting Feedback</fullName>
                </value>
                <value>
                    <fullName>Confirmed but Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRC_Coverage_Date__c</fullName>
        <label>Coverage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PRC_Event_Duration__c</fullName>
        <formula>TODAY() -  PRC_Media_Event_Name__r.PRC_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PRC_Event_Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRC_Journalist_Name__c</fullName>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Media Events Invitees</relationshipLabel>
        <relationshipName>Contact</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PRC_Coverage_Article__c</fullName>
        <label>Coverage Article</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PRC_Coverage_Secured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Coverage Secured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRC_Journalist_Email__c</fullName>
        <formula>PRC_Journalist_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRC_Journalist_Title__c</fullName>
        <formula>PRC_Journalist_Name__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRC_Media_Event_Name__c</fullName>
        <label>Media Event Name</label>
        <referenceTo>PRC_Media_Event__c</referenceTo>
        <relationshipLabel>Media Events Invitees</relationshipLabel>
        <relationshipName>Media_Events_Invitees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PRC_Journalist_Mobile__c</fullName>
        <formula>PRC_Journalist_Name__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRC_Journalist_Account__c</fullName>
        <formula>PRC_Journalist_Name__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>PR_Contact_Management</fullName>
        <active>true</active>
        <label>PR Contact Management</label>
    </recordTypes>
</CustomObject>